--- a/frontend/app.json
+++ b/frontend/app.json
@@ -35,7 +35,15 @@
         }
       ],
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser",
+      [
+        "@sentry/react-native/expo",
+        {
+          "url": "https://sentry.io/",
+          "project": "react-native",
+          "organization": "entresuenos"
+        }
+      ]
     ],
     "experiments": {
       "typedRoutes": true
