--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^7.10.1",
     "@react-navigation/elements": "^2.9.5",
     "@react-navigation/native": "^7.1.28",
+    "@sentry/react-native": "^7.10.0",
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
