--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -20,6 +20,7 @@ expo-env.d.ts
 
 # Metro
 .metro-health-check*
+.metro-cache/
 
 # debug
 npm-debug.*
@@ -32,10 +33,5 @@ yarn-error.*
 
 # local env files
 .env*.local
-
-# typescript
-*.tsbuildinfo
-
-app-example
-
+.env
 .env.local
