--- a/frontend/app.json
+++ b/frontend/app.json
@@ -1,15 +1,17 @@
 {
   "expo": {
-    "name": "frontend",
-    "slug": "frontend",
+    "name": "Mamá Respira",
+    "slug": "mama-respira",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
-    "scheme": "frontend",
+    "scheme": "mamarespira",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.mamarespira.app",
+      "buildNumber": "1"
     },
     "android": {
       "adaptiveIcon": {
