--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@supabase/supabase-js": "^2.91.0",
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
+    "base64-arraybuffer": "^1.0.2",
     "date-fns": "^4.1.0",
     "expo": "^54.0.32",
     "expo-blur": "~15.0.8",
@@ -29,6 +30,7 @@
     "expo-font": "~14.0.11",
     "expo-haptics": "~15.0.8",
     "expo-image": "~3.0.11",
+    "expo-image-picker": "^17.0.10",
     "expo-linking": "^8.0.11",
     "expo-notifications": "^0.32.16",
     "expo-router": "~6.0.22",
